rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/trailing_tokens/dot_annotation.ja
.class public HelloWorld .annotation visible
.super java/lang/Object
